fixing button clipping

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -4,13 +4,12 @@
 }
 
 .navbar {
-  padding: 15px;
+  padding: 1em;
 }
 
 .button-nav {
   margin-top: 1em;
-  margin-left: 10px;
-
+  margin-left: 1em;
 }
 
 #title {
